<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jasonbakthakumar.scribe.LoginActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/scribe_logo"
        android:id="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="1dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/textInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/textInputLayout2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/password"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:background="@drawable/button_sign_up"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/button_sign_in"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:text="@string/copyright_scribe"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:text="@string/login_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:background="@drawable/button_login_google"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:drawableStart="@drawable/google_symbol"
        android:drawableLeft="@drawable/google_symbol"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/login_with_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:background="@drawable/button_login_facebook"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/facebook_symbol"
        android:drawableLeft="@drawable/facebook_symbol"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.43" />

    <jasonbakthakumar.scribe.DotsAnimation.DotLoader
        android:layout_width="wrap_content"
        android:id="@+id/text_dot_loader"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintRight_toRightOf="parent"
        app:dot_radius="4dp"
        app:number_of_dots="4"
        android:visibility="invisible"
        app:color_array="@array/dot_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="8dp"/>


</android.support.constraint.ConstraintLayout>
