<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="65dp">

    <jasonbakthakumar.scribe.Util.OthCircleView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/imageView7"
        android:src="@drawable/pic_placeholder_cute"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:maxLines="1"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <TextView
        android:text="@string/invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>